Fixed dark mode functionality so button now works for non-mobile

--- a/main.css
+++ b/main.css
@@ -92,7 +92,7 @@ body {
 .fa-github {
 }
 
-.fa-sun {
+.fa-sun, .fa-moon{
   padding-left: 10px;
 }
 
